# Maid-Myosotis

./: README.md  bot.py  pyproject.toml
cogs/: dayoff.py  event.py  main.py  react.py  reactionRole.py
extension/: cog.py
