[tool.poetry]
name = "repl_python3_MitoBot"
version = "0.1.0"
description = ""
authors = ["rabbitkao402 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
